jACBrFramework/ACBrFramework_JNI/include/ACBrECF.h


typedef void* INTPTR;

DllImport int ECF_GetTotalAcrescimosISSQN(const INTPTR ecfHandle, double* value);

DllImport int ECF_GetTotalCancelamentos(const INTPTR ecfHandle, double* value);

DllImport int ECF_GetTotalCancelamentosISSQN(const INTPTR ecfHandle, double* value);

DllImport int ECF_GetTotalDescontos(const INTPTR ecfHandle, double* value);

DllImport int ECF_GetTotalDescontosISSQN(const INTPTR ecfHandle, double* value);

DllImport int ECF_GetTotalIsencao(const INTPTR ecfHandle, double* value);

DllImport int ECF_GetTotalIsencaoISSQN(const INTPTR ecfHandle, double* value);

DllImport int ECF_GetTotalNaoFiscal(const INTPTR ecfHandle, double* value);

DllImport int ECF_GetTotalNaoTributado(const INTPTR ecfHandle, double* value);

DllImport int ECF_GetTotalNaoTributadoISSQN(const INTPTR ecfHandle, double* value);

DllImport int ECF_GetTotalPago(const INTPTR ecfHandle, double* value);

DllImport int ECF_GetTotalSubstituicaoTributaria(const INTPTR ecfHandle, double* value);

DllImport int ECF_GetTotalSubstituicaoTributariaISSQN(const INTPTR ecfHandle, double* value);

DllImport int ECF_GetTotalTroco(const INTPTR ecfHandle, double* value);