jACBrFramework/jACBrFramework/src/jACBrFramework/interop/ECFInterop.java

	/**
	 * Original signature : <code>int ECF_GetTotalAcrescimosISSQN(const INTPTR, double*)</code><br>
	 * <i>native declaration : line 299</i><br>
	 * @deprecated use the safer methods {@link #ECF_GetTotalAcrescimosISSQN(com.sun.jna.Pointer, java.nio.DoubleBuffer)} and {@link #ECF_GetTotalAcrescimosISSQN(com.sun.jna.Pointer, com.sun.jna.ptr.DoubleByReference)} instead
	 */
	@Deprecated 
	int ECF_GetTotalAcrescimosISSQN(int ecfHandle, DoubleByReference value);
	/**
	 * Original signature : <code>int ECF_GetTotalAcrescimosISSQN(const INTPTR, double*)</code><br>
	 * <i>native declaration : line 299</i>
	 */
	int ECF_GetTotalAcrescimosISSQN(int ecfHandle, DoubleBuffer value);
	/**
	 * Original signature : <code>int ECF_GetTotalCancelamentos(const INTPTR, double*)</code><br>
	 * <i>native declaration : line 300</i><br>
	 * @deprecated use the safer methods {@link #ECF_GetTotalCancelamentos(com.sun.jna.Pointer, java.nio.DoubleBuffer)} and {@link #ECF_GetTotalCancelamentos(com.sun.jna.Pointer, com.sun.jna.ptr.DoubleByReference)} instead
	 */
	@Deprecated 
	int ECF_GetTotalCancelamentos(int ecfHandle, DoubleByReference value);
	/**
	 * Original signature : <code>int ECF_GetTotalCancelamentos(const INTPTR, double*)</code><br>
	 * <i>native declaration : line 300</i>
	 */
	int ECF_GetTotalCancelamentos(int ecfHandle, DoubleBuffer value);
	/**
	 * Original signature : <code>int ECF_GetTotalCancelamentosISSQN(const INTPTR, double*)</code><br>
	 * <i>native declaration : line 301</i><br>
	 * @deprecated use the safer methods {@link #ECF_GetTotalCancelamentosISSQN(com.sun.jna.Pointer, java.nio.DoubleBuffer)} and {@link #ECF_GetTotalCancelamentosISSQN(com.sun.jna.Pointer, com.sun.jna.ptr.DoubleByReference)} instead
	 */
	@Deprecated 
	int ECF_GetTotalCancelamentosISSQN(int ecfHandle, DoubleByReference value);
	/**
	 * Original signature : <code>int ECF_GetTotalCancelamentosISSQN(const INTPTR, double*)</code><br>
	 * <i>native declaration : line 301</i>
	 */
	int ECF_GetTotalCancelamentosISSQN(int ecfHandle, DoubleBuffer value);
	/**
	 * Original signature : <code>int ECF_GetTotalDescontos(const INTPTR, double*)</code><br>
	 * <i>native declaration : line 302</i><br>
	 * @deprecated use the safer methods {@link #ECF_GetTotalDescontos(com.sun.jna.Pointer, java.nio.DoubleBuffer)} and {@link #ECF_GetTotalDescontos(com.sun.jna.Pointer, com.sun.jna.ptr.DoubleByReference)} instead
	 */
	@Deprecated 
	int ECF_GetTotalDescontos(int ecfHandle, DoubleByReference value);
	/**
	 * Original signature : <code>int ECF_GetTotalDescontos(const INTPTR, double*)</code><br>
	 * <i>native declaration : line 302</i>
	 */
	int ECF_GetTotalDescontos(int ecfHandle, DoubleBuffer value);
	/**
	 * Original signature : <code>int ECF_GetTotalDescontosISSQN(const INTPTR, double*)</code><br>
	 * <i>native declaration : line 303</i><br>
	 * @deprecated use the safer methods {@link #ECF_GetTotalDescontosISSQN(com.sun.jna.Pointer, java.nio.DoubleBuffer)} and {@link #ECF_GetTotalDescontosISSQN(com.sun.jna.Pointer, com.sun.jna.ptr.DoubleByReference)} instead
	 */
	@Deprecated 
	int ECF_GetTotalDescontosISSQN(int ecfHandle, DoubleByReference value);
	/**
	 * Original signature : <code>int ECF_GetTotalDescontosISSQN(const INTPTR, double*)</code><br>
	 * <i>native declaration : line 303</i>
	 */
	int ECF_GetTotalDescontosISSQN(int ecfHandle, DoubleBuffer value);
	/**
	 * Original signature : <code>int ECF_GetTotalIsencao(const INTPTR, double*)</code><br>
	 * <i>native declaration : line 304</i><br>
	 * @deprecated use the safer methods {@link #ECF_GetTotalIsencao(com.sun.jna.Pointer, java.nio.DoubleBuffer)} and {@link #ECF_GetTotalIsencao(com.sun.jna.Pointer, com.sun.jna.ptr.DoubleByReference)} instead
	 */
	@Deprecated 
	int ECF_GetTotalIsencao(int ecfHandle, DoubleByReference value);
	/**
	 * Original signature : <code>int ECF_GetTotalIsencao(const INTPTR, double*)</code><br>
	 * <i>native declaration : line 304</i>
	 */
	int ECF_GetTotalIsencao(int ecfHandle, DoubleBuffer value);
	/**
	 * Original signature : <code>int ECF_GetTotalIsencaoISSQN(const INTPTR, double*)</code><br>
	 * <i>native declaration : line 305</i><br>
	 * @deprecated use the safer methods {@link #ECF_GetTotalIsencaoISSQN(com.sun.jna.Pointer, java.nio.DoubleBuffer)} and {@link #ECF_GetTotalIsencaoISSQN(com.sun.jna.Pointer, com.sun.jna.ptr.DoubleByReference)} instead
	 */
	@Deprecated 
	int ECF_GetTotalIsencaoISSQN(int ecfHandle, DoubleByReference value);
	/**
	 * Original signature : <code>int ECF_GetTotalIsencaoISSQN(const INTPTR, double*)</code><br>
	 * <i>native declaration : line 305</i>
	 */
	int ECF_GetTotalIsencaoISSQN(int ecfHandle, DoubleBuffer value);
	/**
	 * Original signature : <code>int ECF_GetTotalNaoFiscal(const INTPTR, double*)</code><br>
	 * <i>native declaration : line 306</i><br>
	 * @deprecated use the safer methods {@link #ECF_GetTotalNaoFiscal(com.sun.jna.Pointer, java.nio.DoubleBuffer)} and {@link #ECF_GetTotalNaoFiscal(com.sun.jna.Pointer, com.sun.jna.ptr.DoubleByReference)} instead
	 */
	@Deprecated 
	int ECF_GetTotalNaoFiscal(int ecfHandle, DoubleByReference value);
	/**
	 * Original signature : <code>int ECF_GetTotalNaoFiscal(const INTPTR, double*)</code><br>
	 * <i>native declaration : line 306</i>
	 */
	int ECF_GetTotalNaoFiscal(int ecfHandle, DoubleBuffer value);
	/**
	 * Original signature : <code>int ECF_GetTotalNaoTributado(const INTPTR, double*)</code><br>
	 * <i>native declaration : line 307</i><br>
	 * @deprecated use the safer methods {@link #ECF_GetTotalNaoTributado(com.sun.jna.Pointer, java.nio.DoubleBuffer)} and {@link #ECF_GetTotalNaoTributado(com.sun.jna.Pointer, com.sun.jna.ptr.DoubleByReference)} instead
	 */
	@Deprecated 
	int ECF_GetTotalNaoTributado(int ecfHandle, DoubleByReference value);
	/**
	 * Original signature : <code>int ECF_GetTotalNaoTributado(const INTPTR, double*)</code><br>
	 * <i>native declaration : line 307</i>
	 */
	int ECF_GetTotalNaoTributado(int ecfHandle, DoubleBuffer value);
	/**
	 * Original signature : <code>int ECF_GetTotalNaoTributadoISSQN(const INTPTR, double*)</code><br>
	 * <i>native declaration : line 308</i><br>
	 * @deprecated use the safer methods {@link #ECF_GetTotalNaoTributadoISSQN(com.sun.jna.Pointer, java.nio.DoubleBuffer)} and {@link #ECF_GetTotalNaoTributadoISSQN(com.sun.jna.Pointer, com.sun.jna.ptr.DoubleByReference)} instead
	 */
	@Deprecated 
	int ECF_GetTotalNaoTributadoISSQN(int ecfHandle, DoubleByReference value);
	/**
	 * Original signature : <code>int ECF_GetTotalNaoTributadoISSQN(const INTPTR, double*)</code><br>
	 * <i>native declaration : line 308</i>
	 */
	int ECF_GetTotalNaoTributadoISSQN(int ecfHandle, DoubleBuffer value);
	/**
	 * Original signature : <code>int ECF_GetTotalPago(const INTPTR, double*)</code><br>
	 * <i>native declaration : line 309</i><br>
	 * @deprecated use the safer methods {@link #ECF_GetTotalPago(com.sun.jna.Pointer, java.nio.DoubleBuffer)} and {@link #ECF_GetTotalPago(com.sun.jna.Pointer, com.sun.jna.ptr.DoubleByReference)} instead
	 */
	@Deprecated 
	int ECF_GetTotalPago(int ecfHandle, DoubleByReference value);
	/**
	 * Original signature : <code>int ECF_GetTotalPago(const INTPTR, double*)</code><br>
	 * <i>native declaration : line 309</i>
	 */
	int ECF_GetTotalPago(int ecfHandle, DoubleBuffer value);
	/**
	 * Original signature : <code>int ECF_GetTotalSubstituicaoTributaria(const INTPTR, double*)</code><br>
	 * <i>native declaration : line 310</i><br>
	 * @deprecated use the safer methods {@link #ECF_GetTotalSubstituicaoTributaria(com.sun.jna.Pointer, java.nio.DoubleBuffer)} and {@link #ECF_GetTotalSubstituicaoTributaria(com.sun.jna.Pointer, com.sun.jna.ptr.DoubleByReference)} instead
	 */
	@Deprecated 
	int ECF_GetTotalSubstituicaoTributaria(int ecfHandle, DoubleByReference value);
	/**
	 * Original signature : <code>int ECF_GetTotalSubstituicaoTributaria(const INTPTR, double*)</code><br>
	 * <i>native declaration : line 310</i>
	 */
	int ECF_GetTotalSubstituicaoTributaria(int ecfHandle, DoubleBuffer value);
	/**
	 * Original signature : <code>int ECF_GetTotalSubstituicaoTributariaISSQN(const INTPTR, double*)</code><br>
	 * <i>native declaration : line 311</i><br>
	 * @deprecated use the safer methods {@link #ECF_GetTotalSubstituicaoTributariaISSQN(com.sun.jna.Pointer, java.nio.DoubleBuffer)} and {@link #ECF_GetTotalSubstituicaoTributariaISSQN(com.sun.jna.Pointer, com.sun.jna.ptr.DoubleByReference)} instead
	 */
	@Deprecated 
	int ECF_GetTotalSubstituicaoTributariaISSQN(int ecfHandle, DoubleByReference value);
	/**
	 * Original signature : <code>int ECF_GetTotalSubstituicaoTributariaISSQN(const INTPTR, double*)</code><br>
	 * <i>native declaration : line 311</i>
	 */
	int ECF_GetTotalSubstituicaoTributariaISSQN(int ecfHandle, DoubleBuffer value);
	/**
	 * Original signature : <code>int ECF_GetTotalTroco(const INTPTR, double*)</code><br>
	 * <i>native declaration : line 312</i><br>
	 * @deprecated use the safer methods {@link #ECF_GetTotalTroco(com.sun.jna.Pointer, java.nio.DoubleBuffer)} and {@link #ECF_GetTotalTroco(com.sun.jna.Pointer, com.sun.jna.ptr.DoubleByReference)} instead
	 */
	@Deprecated 
	int ECF_GetTotalTroco(int ecfHandle, DoubleByReference value);
	/**
	 * Original signature : <code>int ECF_GetTotalTroco(const INTPTR, double*)</code><br>
	 * <i>native declaration : line 312</i>
	 */
	int ECF_GetTotalTroco(int ecfHandle, DoubleBuffer value);

